WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221808
[Mac] Unable to play WebM/Opus generated from Chrome MediaRecorder
https://bugs.webkit.org/show_bug.cgi?id=221808
Summary
[Mac] Unable to play WebM/Opus generated from Chrome MediaRecorder
Jer Noble
Reported
2021-02-12 01:00:48 PST
[Mac] Unable to play WebM/Opus generated from Chrome MediaRecorder
Attachments
Patch
(10.15 KB, patch)
2021-02-12 12:47 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-02-12 12:47:41 PST
Created
attachment 420168
[details]
Patch
EWS
Comment 2
2021-02-12 16:29:41 PST
Committed
r272822
: <
https://commits.webkit.org/r272822
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420168
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-12 16:30:16 PST
<
rdar://problem/74297689
>
Amir Mark Jr
Comment 4
2021-02-15 14:25:49 PST
It looks like changes in
https://trac.webkit.org/changeset/272822/webkit
may have introduce a constant failure in test: platform/mac-bigsur/media/media-webm-no-duration.html History:
https://results.webkit.org/?suite=layout-tests&test=platform%2Fmac-bigsur%2Fmedia%2Fmedia-webm-no-duration.html
Diff: -- /Volumes/Data/slave/bigsur-release-tests-wk1/build/layout-test-results/platform/mac-bigsur/media/media-webm-no-duration-expected.txt +++ /Volumes/Data/slave/bigsur-release-tests-wk1/build/layout-test-results/platform/mac-bigsur/media/media-webm-no-duration-actual.txt @@ -1,8 +1,6 @@ RUN(audio.src = "../../../media/content/test-no-duration.webm") -EVENT(canplay) -RUN(promise = audio.play()) -Promise resolved OK -EXPECTED (audio.currentTime > '0') OK +EVENT(error) +Failed to load media FAIL END OF TEST
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug