[Mac] Unable to play WebM/Opus generated from Chrome MediaRecorder https://bugs.webkit.org/show_bug.cgi?id=221808

Reviewed by Eric Carlson.

Source/WebCore:

Test: platform/mac-bigsur/media/media-webm-no-duration.html

In the absense of an explicit decode timestamp, CoreMedia convention is to use
the presentation timestamp instead.

All fields in the CoreAudioOpusHeader must be byte-swapped.

* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.mm:
(WebCore::MediaSampleAVFObjC::decodeTime const):
* platform/graphics/cocoa/WebMAudioUtilitiesCocoa.mm:
(WebCore::cookieFromOpusCodecPrivate):

Source/WebKit:

In the absense of an explicit duration parsed from the InitializationSegment,
rely instead on the maximum presentation timestamp available in any MediaTrackReader
to generate an explicit duration.

* Shared/mac/MediaFormatReader/MediaFormatReader.cpp:
(WebKit::MediaFormatReader::finishParsing):
(WebKit::MediaFormatReader::copyProperty):
* Shared/mac/MediaFormatReader/MediaTrackReader.cpp:
(WebKit::MediaTrackReader::greatestPresentationTime const):
* Shared/mac/MediaFormatReader/MediaTrackReader.h:

LayoutTests:

* platform/mac-bigsur/media/media-webm-no-duration-expected.txt: Added.
* platform/mac-bigsur/media/media-webm-no-duration.html: Added.


Canonical link: https://commits.webkit.org/234058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272822 268f45cc-cd09-0410-ab3c-d52691b4dbfc